# NEAR-ml-etl

./: .gitignore  docker-compose.yml  requirements.txt  start-all.bat  start-docker.bat  start.bat
api/: .dockerignore  Dockerfile  build.bat  build.sh  go.mod  go.sum  main.go
api/internal/db/: sqlite.go
api/internal/handler/: metrics.go  predict.go  ws.go
api/internal/predictor/: predictor.go
api/internal/ws/: hub.go
collector/: .dockerignore  Cargo.toml  Dockerfile  collector.py  simple_collector.py
collector/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  router.js  style.css
frontend/src/utils/: security.js
frontend/src/views/: Anomalies.vue  Dashboard.vue  Predictions.vue  System.vue
ml/: .dockerignore  Dockerfile  model.py  model_classifier.joblib  model_regressor.joblib  requirements.txt  train.py
pipeline/: .dockerignore  Dockerfile  cleaner.py  dataSeeding.py  features.py  init_db.py  quick_features.py  requirements.txt
pipeline/data/: metrics.db
tests/: test_model.py  test_train.py
